--- a/Archivos_JS/Circuitos - Velocidad/main.css
+++ b/Archivos_JS/Circuitos - Velocidad/main.css
@@ -1,12 +1,39 @@
-input{
-    width: 110px;
-    margin-left: 50%;
-    transform: translateX(-50%);
+#respuesta{
+    text-align: center;
+    font-family: 'Ubuntu', sans-serif;
+    color: black;
+}
+#respuestaTrabajo{
+    text-align: center;
+    font-family: 'Ubuntu', sans-serif;
+    color: black;
+}
+#respuestaCargaElectrica{
+    text-align: center;
+    font-family: 'Ubuntu', sans-serif;
+    color: black;
+}
+#divVelocidad{
+    margin-top: 50px;
+    margin-left: 50px;
+    width: 500px;
+    height: 400px;
+    border: 1px solid;
+    border-color: black;
+    border-radius: 15px;
 }
 #divTrabajo{
-    width: 110px;
-    margin-left: 50%;
-    transform: translateX(-50%);
+    margin-top: 50px;
+    margin-left: 600px;
+    width: 500px;
+    height: 450px;
+    border: 1px solid;
+    border-color: black;
+    border-radius: 15px;
+}
+#divCargaElectrica{
+    margin-top: 50px;
+    margin-left: 1150px;
     width: 500px;
     height: 400px;
     border: 1px solid;
@@ -36,8 +63,8 @@ button{
     font-family: 'Montserrat', sans-serif;
     font-size: 15px;
 }
-#respuesta{
-    text-align: center;
-    font-family: 'Ubuntu', sans-serif;
-    color: black;
+input{
+    width: 110px;
+    margin-left: 50%;
+    transform: translateX(-50%);
 }
